Everything is working till here!

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,8 @@
     android:paddingRight="16dp"
     android:paddingTop="16dp"
     android:paddingBottom="16dp"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@color/white">
 
     <!-- Headline -->
     <TextView
@@ -14,6 +15,8 @@
         android:layout_height="wrap_content"
         android:text="Notification collector"
         android:textSize="24sp"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         android:id="@+id/txtHeadline"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"/>
@@ -23,39 +26,41 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Permissions status"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:textStyle="bold"
         android:id="@+id/txtPermissionsStatus"
         android:layout_below="@+id/txtHeadline"
         android:layout_marginTop="16dp"
         android:layout_centerHorizontal="true"/>
 
     <!-- Permissions screen button -->
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Go to Permissions Screen"
-        android:onClick="buttonClicked"
         android:id="@+id/btnPermissionsScreen"
         android:layout_below="@+id/txtPermissionsStatus"
         android:layout_marginTop="16dp"
         android:layout_centerHorizontal="true"/>
-
-    <!-- Clear All Notifications Button -->
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Clear All Notification"
-        android:onClick="buttonClicked"
-        android:id="@+id/btnClearNotify"
-        android:layout_below="@+id/btnPermissionsScreen"
-        android:layout_alignLeft="@+id/btnPermissionsScreen"
-        android:layout_alignRight="@+id/btnPermissionsScreen"/>
 
     <!-- RecyclerView for notifications -->
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:id="@+id/recyclerView"
-        android:layout_below="@+id/btnClearNotify"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/btnPermissionsScreen"
+        android:layout_above="@+id/btnClearNotify"
         android:layout_marginTop="16dp"/>
+
+    <!-- Clear All Notifications Button -->
+    <com.google.android.material.button.MaterialButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Clear All Notification"
+        android:id="@+id/btnClearNotify"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="16dp"/>
+
 </RelativeLayout>
