--- a/app/src/main/res/layout/notification_item.xml
+++ b/app/src/main/res/layout/notification_item.xml
@@ -6,6 +6,12 @@
     android:padding="8dp"
     android:background="@drawable/border">
 
+    <ImageView
+        android:id="@+id/packageIcon"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center"/>
+
     <TextView
         android:id="@+id/packageName"
         android:layout_width="wrap_content"
