--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         android:textSize="18sp"
         android:textStyle="bold"
         android:layout_below="@+id/txtHeadline"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_centerHorizontal="true"/>
 
     <!-- Permissions screen button for Create Permissions -->
@@ -41,7 +41,7 @@
         android:layout_height="wrap_content"
         android:text="Go to Notification Settings"
         android:layout_below="@+id/txtPermissionsCreate"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_centerHorizontal="true"/>
 
     <!-- Permissions to Read Notifications -->
@@ -54,7 +54,7 @@
         android:textSize="18sp"
         android:textStyle="bold"
         android:layout_below="@+id/btnNotificationAccess"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_centerHorizontal="true"/>
 
     <!-- Permissions screen button for Read Permissions -->
@@ -64,7 +64,7 @@
         android:layout_height="wrap_content"
         android:text="Go to Permissions Screen"
         android:layout_below="@+id/txtPermissionsRead"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_centerHorizontal="true"/>
 
     <!-- First additional TextView -->
@@ -77,7 +77,7 @@
         android:textStyle="bold"
         android:textSize="18sp"
         android:layout_below="@+id/btnPermissionsScreen"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_centerHorizontal="true"/>
 
     <!-- RecyclerView for notifications -->
@@ -87,7 +87,9 @@
         android:layout_height="0dp"
         android:layout_below="@+id/txtCouningFrom"
         android:layout_above="@+id/btnStatistics"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="8dp"
+        android:background="@drawable/recycler_border" />
+
 
     <!-- Clear All Notifications Button -->
     <Button
@@ -97,7 +99,7 @@
         android:text="Clear All Notifications"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="16dp"/>
+        android:layout_marginBottom="8dp"/>
 
     <!-- Statistics Button -->
     <Button
@@ -107,6 +109,6 @@
         android:text="Statistics"
         android:layout_above="@id/btnClearNotify"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="8dp"/>
 
 </RelativeLayout>
